# MeloMIDI

./: .gitignore  .gitmodules  README.md  TODO.txt
project/: Node.gd  default_bus_layout.tres  export_presets.cfg  project.godot  version.gd
project/addons/midi/: readme.md  test.mid
project/autoload/: global_shortcuts.gd  midi_player.gd  midi_player.tscn  midi_saver.gd  options.gd  spectrum_analyzer.gd  wave_player.gd  wave_player.tscn
project/themes/: default.theme  scrollbar_remover.tres  spectrum_color_scheme.tres  ubuntu.tres
project/user_interface/: conversion_options_dialog.gd  conversion_options_window.gd  cursor_options.gd  fft_options.gd  general_options_dialog.gd  graph_scroll_container.gd  help_dialog.gd  main_window.gd  main_window.tscn  note.gd  note.tscn  notes.gd  open_file_dialog.gd  open_wave_file_dialog.gd  options_window.gd  piano_bar.gd  piano_scroll_container.gd  playback_cursor.gd  save_file_dialog.gd  save_midi_file_dialog.gd  spectrum_sprite.tscn  spectrum_texture.gd  spectrum_texture.tscn  stripes.gd  timeline_bar.gd  timeline_scroll_container.gd  toolbar.gd  welcome_dialog.gd
screenshots/: icon.xcf
source/: CMakeLists.txt  build.sh  build_linux.sh  build_windows.sh  mingw-w64-x86_64.cmake  spectrum_analyzer.cpp
